Distilling and summarized information into singular html file to refer back to.

--- a/9.0 Display Flex/absolute-position.html
+++ b/9.0 Display Flex/absolute-position.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Absolute Positioning</title>
 
+  <link rel="stylesheet" href="header-style.css">
+
   <!-- WITH ABSOLUTE POSITIONS: there is much more trial and error required!-->
   <style>
     div {
@@ -33,10 +35,22 @@
   </style>
 </head>
 
-<body>
-
   <body>
-<h1>Absolute Positioning</h1>
+      <!-- HEADER -->
+    <h1 id="title"> Flexbox: Layout Ease & Importance </h1>
+
+    <div class="header-container">
+        <h3>Page Layout Methods</h3>
+
+        <li><a href="./index.html">Flexbox</li>
+        <li><a href="./html-table.html">HTML Table</a></li>
+        <li><a href="./inline-block.html">Inline-Block</li>
+        <li><a href="./absolute-position.html" class="selected">Absolute Positioning</li>
+        <li><a href="./float.html">Float</a></li>
+    </div>
+
+    <h1>Absolute Positioning</h1>
+    
     <div class="one">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus eveniet minus dolor qui laudantium
         molestias repudiandae reprehenderit impedit aliquid, fugit eligendi placeat, unde praesentium, vel veritatis
