--- a/9.0 Display Flex/inline-block.html
+++ b/9.0 Display Flex/inline-block.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inline Block</title>
+
+  <link rel="stylesheet" href="header-style.css">
+
+
   <style>
     div {
       display: inline-block;
@@ -26,9 +30,22 @@
 </head>
 
 <body>
+  <!-- HEADER -->
+  <h1 id="title"> Flexbox: Layout Ease & Importance </h1>
 
-  <body>
+  <div class="header-container">
+      <h3>Page Layout Methods</h3>
+
+      <li><a href="./index.html">Flexbox</li>
+      <li><a href="./html-table.html">HTML Table</li>
+      <li><a href="./inline-block.html" class="selected">Inline-Block</li>
+      <li><a href="./absolute-position.html">Absolute Positioning</li>
+      <li><a href="./float.html">Float</a></li>
+  </div>
+
+  
     <h1>Inline-Block</h1>
+
     <div class="one">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus eveniet minus dolor qui laudantium
         molestias repudiandae reprehenderit impedit aliquid, fugit eligendi placeat, unde praesentium, vel veritatis
@@ -49,6 +66,6 @@
         velit ipsum architecto ad maiores modi aperiam nemo sed est molestiae? Facere velit magnam assumenda ullam
         veniam officia ea doloribus dolor. Atque, dolore exercitationem. Expedita, eius?</p>
     </div>
-  </body>
+  
 
 </html>
