--- a/9.0 Display Flex/html-table.html
+++ b/9.0 Display Flex/html-table.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Table Layout</title>
+
+  <link rel="stylesheet" href="header-style.css">
+
   <style>
     table {
       width: 100%;
@@ -33,7 +36,21 @@
 </head>
 
 <body>
+  <!-- HEADER -->
+  <h1 id="title"> Flexbox: Layout Ease & Importance </h1>
+
+  <div class="header-container">
+      <h3>Page Layout Methods</h3>
+
+      <li><a href="./index.html">Flexbox</li>
+      <li><a href="./html-table.html" class="selected">HTML Table</a></li>
+      <li><a href="./inline-block.html">Inline-Block</li>
+      <li><a href="./absolute-position.html">Absolute Positioning</li>
+      <li><a href="./float.html">Float</a></li>
+  </div>
+  
   <h1>HTML Table Layout</h1>
+  
   <table>
     <tr class="row">
       <td class="col1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima numquam odit perspiciatis
