--- a/9.0 Display Flex/index.html
+++ b/9.0 Display Flex/index.html
@@ -5,39 +5,69 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Column Layout Methods</title>
+
+  <link rel="stylesheet" href="header-style.css">
+
   <style>
-    p {
-      padding: 0;
-      margin: 0;
-      font-weight: 700;
-    }
-
-    li {
-      list-style: none;
-    }
-
+    /* FLEX BOX */
     .container {
       display:flex;
-      gap:1rem;
+      gap: 1rem;
+      padding: 1rem;
+    }
 
-      padding: 10px;
-      background-color: gold;
+    p {
+      background-color: darkseagreen;
     }
 
   </style>
 </head>
 
 <body>
-  <div class="container">
-    <p>Page Layout Methods</p>
+  <!-- HEADER -->
+  <h1 id="title"> Flexbox: Layout Ease & Importance </h1>
 
-    <li><a href="./html-table.html">HTML Table</a></li>
-    <li><a href="./inline-block.html">Inline-Block</li>
-    <li><a href="./absolute-position.html">Absolute Positioning</li>
-    <li><a href="./float.html">Float</li>
-    <li><a href="./flex.html">Flexbox</li>
+  <div class="header-container">
+      <h3>Page Layout Methods</h3>
 
+      <li><a href="./index.html" class="selected">Flexbox</li>
+      <li><a href="./html-table.html">HTML Table</a></li>
+      <li><a href="./inline-block.html">Inline-Block</li>
+      <li><a href="./absolute-position.html">Absolute Positioning</li>
+      <li><a href="./float.html">Float</a></li>
   </div>
+  
+  <h1><i>Flex Box</i></h1>
+
+  <!-- FLEX BOX IMPLEMENTATION -->
+  <!-- THE flex display affects all objects within this larger div-->
+  <div class="container">
+    <div class="one">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus eveniet minus dolor qui laudantium
+        molestias repudiandae reprehenderit impedit aliquid, fugit eligendi placeat, unde praesentium, vel veritatis
+        voluptate ex corporis magni deleniti. Ipsum id at ad quo neque eos ducimus similique aliquam, modi unde soluta
+        inventore non eius tenetur quibusdam corrupti!</p>
+    </div>
+    <div class="two">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque nobis rem ipsa voluptatibus, recusandae illum
+        consequuntur cum, nulla dolores eligendi fuga harum labore animi dolorum asperiores voluptate praesentium
+        beatae, quibusdam sapiente illo ullam cupiditate officiis. Qui consequuntur sit quaerat atque magni possimus,
+        nemo, pariatur incidunt delectus laborum veritatis placeat fugit.</p>
+    </div>
+    <div class="three">
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus, voluptatem officia nulla minus, sunt nam
+        aliquam quis explicabo consequatur beatae at? Eligendi corrupti quisquam enim accusantium possimus quis esse
+        praesentium! Obcaecati repudiandae commodi, earum eaque velit voluptatum illum temporibus. Corporis quod
+        dolorem
+        officia, optio eos fuga. Voluptatum repellat maiores laborum rem voluptas esse. Hic consequuntur, quidem nobis
+        suscipit iste autem quae! Itaque ut doloribus eaque quidem quam nostrum eos quibusdam, id vero optio
+        consectetur
+        velit ipsum architecto ad maiores modi aperiam nemo sed est molestiae? Facere velit magnam assumenda ullam
+        veniam officia ea doloribus dolor. Atque, dolore exercitationem. Expedita, eius?</p>
+    </div>
+  </div>
+
+
 </body>
 
 </html>
