Created space to explore surveying project specific tasts

--- a/Surveying Tool Explore Space/retrieveInput.html
+++ b/Surveying Tool Explore Space/retrieveInput.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--
+"retrieveInput" 
+PROJECT: Data Surveying Tool, Winter Y1
+DATE: 12/12/23
+
+PURPOSE: Exploring the ways in which clicks can register on graph.
+
+  1. Testing clickin on Chart.js as point
+
+  2. Javascript point position, somehow editing depending on the screen size to place click accurately.
+     - This would need to be tested for different screen sizes, such as mobile as aspect ratio could effect it.
+
+
+  Should research the different possibilities.
+
+
+
+
+
+
+-->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,8 +49,7 @@
   <!-- HEADER -->
   <h1 id="title"> Chart.js Exploring </h1>
   <p>December 12th, 2023</p>
-  <p><a rel="noreferrer noopener" target="_blank" href="https://www.w3schools.com/js/js_graphics_chartjs.asp">w3schools documentation/n</a></p>
-  <p><a rel="noreferrer noopener" target="_blank" href="https://www.chartjs.org/docs/latest/">Official Chart.js documentation</a></p>
+  <a rel="noreferrer noopener" target="_blank" href="https://www.w3schools.com/js/js_graphics_chartjs.asp">Link to the docs</a>
   
   <!-- BAR CHART -->
   <h1><i>Bar Chart</i></h1>
