--- a/Surveying Tool Explore Space/retrieveInput.html
+++ b/Surveying Tool Explore Space/retrieveInput.html
@@ -4,7 +4,7 @@
 <!--
 "retrieveInput" 
 PROJECT: Data Surveying Tool, Winter Y1
-DATE: 12/12/23
+DATE: 12/12/23, 12/16/23
 
 PURPOSE: Exploring the ways in which clicks can register on graph.
 
@@ -17,26 +17,31 @@ PURPOSE: Exploring the ways in which clicks can register on graph.
   Should research the different possibilities.
 
 
-
-
-
-
 -->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Column Layout Methods</title>
+  <title>Retrieving Input</title>
 
-  <link rel="stylesheet" href="header-style.css">
+  <!-- BOOTSTRAP IMPORT -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
   <style>
-    
+    body {
+      margin: 5rem;
+    }
+
+    pre {
+      text-wrap: inherit;
+    }
   </style>
 </head>
 
 <body>
-  <!-- 1. IMPORTING PACKAGE-->
+  <!-- 1. IMPORTING PACKAGES (Chart.js & Bootstrap, respectively)-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
 
   <script>
     // INFORMATION
@@ -47,81 +52,33 @@ PURPOSE: Exploring the ways in which clicks can register on graph.
 
 
   <!-- HEADER -->
-  <h1 id="title"> Chart.js Exploring </h1>
-  <p>December 12th, 2023</p>
-  <a rel="noreferrer noopener" target="_blank" href="https://www.w3schools.com/js/js_graphics_chartjs.asp">Link to the docs</a>
+  <h1 id="title"> Chart.js Retrieving Input</h1>
+  <p>December 15th, 2023</p>
+  <p>Goal: Retreive the position of a click on a Chart.js graph. Specifically, with the hope of using that to 
+    update the chart's data in the future.
+  </p>
+
+  <hr>
+  <p><i>Related Links & Responses</i></p>
+  <a rel="noreferrer noopener" target="_blank" href="https://www.chartjs.org/docs/latest/">Chart.js Docs</a><p></p>
+  <a rel="noreferrer noopener" target="_blank" href="https://www.chartjs.org/docs/latest/configuration/interactions.html">Chart.js -- Converting Events into Data</a>
   
-  <!-- BAR CHART -->
-  <h1><i>Bar Chart</i></h1>
-  <canvas id="barChart" style="width:100%; max-width:100rem"></canvas>
-
-  <button onclick="addBarInfo()">Add Bar Info</button>
-  <script>
-    // EMPTY BAR CHART
-    const barChart = new Chart("barChart", {
-      type: "bar",
-      data: {},
-      options: {}
-    });
-
-    var xValues = countries
-    var yValues = countryValues
-    function addBarInfo() {
-      new Chart("barChart", {
-        type: "bar",
-        data: {
-          labels: xValues,
-          datasets: [{
-            backgroundColor: barColors,
-            data: yValues
-          }]
-        },
-        options: {
-          title: {
-            display: true,
-            text: "World Wide Wine Production"
-          }
-        }
-      });
-    }
-  </script>
-
   <hr>
 
-  <!-- PIE CHART -->
-  <h1><i>Pie Chart</i></h1>
-  <canvas id="pieChart" style="width:100%; max-width:100rem"></canvas>
-  <script>
-      const pieChart = 
-       new Chart("pieChart", {
-        type: "pie",
-        data: {
-          labels: xValues,
-          datasets: [{
-            backgroundColor: barColors,
-            data: yValues
-          }]
-        },
-        options: {
-          title: {
-            display: true,
-            text: "World Wide Wine Production"
-          }
-        }
-      });
-  </script>
+  <p>
+    Were successfully able to add this, check the console to see. 
+    Whenever the chart is clicked, the x and y position, relative to the graph is outputted. 
+  </p>
 
-  <hr>
+  <code>
+    <pre>var xPos = scatterPlot.scales["x-axis-1"].getValueForPixel(canvasPosition.x)</pre>
+    <pre>var yPos = scatterPlot.scales["y-axis-1"].getValueForPixel(canvasPosition.y)</pre>
+  </code>
 
   <!-- Scatter Plot !! -->
   <h1><i>Scatter Plot</i></h1>
-  <p>This is most likely the kind that we will need for the data surveying tool!</p>
 
-  <p>
-    Note that the data is in the form of x:, y: objects in javascript (which I will need to review),
-    allowing for *hopefully* easy importing of a CSV
-  </p>
-  <canvas id="scatterPlot" stype="width:100%; max-width:100rem"></canvas>
+  <canvas id="scatterPlot" stype="width:85%; max-width:100rem"></canvas>
   <script>
     const xyValues = [
       {x:50, y:7},
@@ -137,51 +94,38 @@ PURPOSE: Exploring the ways in which clicks can register on graph.
       {x:150, y:15}
     ];
 
+    // Retrieve clicks inputs
+    // Display that input to the user -> Add that point to the
+
     const scatterPlot = new Chart("scatterPlot", {
       type: "scatter",
+
+      options: {
+        // RESPONDS when canvas is clicked on
+        onClick: (e) => {
+            const canvasPosition = Chart.helpers.getRelativePosition(e, scatterPlot);
+
+            var xPos = scatterPlot.scales["x-axis-1"].getValueForPixel(canvasPosition.x)
+            var yPos = scatterPlot.scales["y-axis-1"].getValueForPixel(canvasPosition.y)
+
+            console.log("xPos: " + xPos)
+            console.log("yPos: " + yPos)
+        }
+      },
+
       data: {
         datasets: [{
           pointRadius: 4,
           pointBackgroundColor: "rgba(0,0,255,1)",
           data:xyValues
         }]
-      }
+      },
     })
+
+    console.log(scatterPlot)
   </script>
   
   <hr>
-
-  <!-- Line Plot !! -->
-  <h1><i>Line Plot</i></h1>
-  <p>Same as "Scatter Plot,"" however adds a line.</p>
-  <p>To change this in code, simply change from type: "scatter" to "line." In addition, 
-    it will require seperate x and y values but nonetheless.
-  </p>
-
-
-  <canvas id="linePlot" stype="width:100%; max-width:100rem"></canvas>
-  <script>
-
-    const linePlot = new Chart("linePlot", {
-      type: "line",
-      data: {
-        labels: xValues,
-        datasets: [{
-          pointRadius: 4,
-          pointBackgroundColor: "rgba(0,0,255,1)",
-          data:yValues
-        }]
-      }
-    })
-  </script>
-
-  <hr>
-
-  <h2>Other important notes!</h2>
-  <h3>Adding multiple plots to one canvas</h3>
-  <p>You can add multple charts to one canvas simply by listing mutple datasets, noting however that most likely
-    you will be using the same xValues/labels. 
-  </p>
 
 </body>
 
