Organizing new information

--- a/Surveying Tool Explore Space/retrieveInput.html
+++ b/Surveying Tool Explore Space/retrieveInput.html
@@ -4,7 +4,8 @@
 <!--
 "retrieveInput" 
 PROJECT: Data Surveying Tool, Winter Y1
-DATE: 12/12/23, 12/16/23
+DATE STARTED: 12/12/23 
+DATE FINISHED: 12/16/23
 
 PURPOSE: Exploring the ways in which clicks can register on graph.
 
@@ -15,7 +16,6 @@ PURPOSE: Exploring the ways in which clicks can register on graph.
 
 
   Should research the different possibilities.
-
 
 -->
 <head>
